--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,15 @@
-body {
+html, body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;;
+}
+.center {
+    display: flex;
+    justify-content: center;
+    padding: 10px;
 }
